--- a/Backend_SpringBoot_Activate/pom.xml
+++ b/Backend_SpringBoot_Activate/pom.xml
@@ -65,6 +65,12 @@
 	  <version>0.9.1</version>
 	  <type>jar</type>
 	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-test</artifactId>
+	  <version>5.3.15</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
