--- a/Backend_SpringBoot_Activate/src/main/resources/application.properties
+++ b/Backend_SpringBoot_Activate/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Database Properties
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/reto_bancolombia?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
+spring.datasource.url=jdbc:mysql://localhost:3306/activate?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.initialization-mode=always
