--- a/Backend_SpringBoot_Activate/src/main/resources/application.properties
+++ b/Backend_SpringBoot_Activate/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.servlet.multipart.max-request-size=10MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 #Need a configured gmail account. Please check https://support.google.com/accounts/answer/185833
-spring.mail.username=paulislapeque@gmail.com
-spring.mail.password=tdfwcypphnfptfeo
+spring.mail.username=soporteactivate2022@gmail.com
+spring.mail.password=eyhrfqrreyetmjah
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
